
<resources>
    <string name="app_name">Coroutines</string>
    <string name="main_thread">Main thread</string>
    <string name="activity_global_scope">GlobalScope</string>
    <string name="lifecycle_scope_blocking">lifecycleScope blocking</string>
    <string name="lifecycle_scope">lifecycleScope</string>
    <string name="coroutine_scope_io_dispatcher">CoroutineScope(Dispatchers.IO)</string>
    <string name="viewmodel_scope">viewModelScope</string>
    <string name="livedata_scope">liveData + emit</string>
</resources>